# pg_meritrank

./: .env.example  Cargo.toml  README.md  pg_meritrank.control
sql/: implement_triggers_new.sql.example  initial_structure.sql.example
src/: error.rs  fetch.rs  generate.rs  graph.rs  init.rs  lib.rs  shared.rs  sql.rs
src/lib_graph/: constants.rs  counter.rs  debug.rs  display.rs  edge.rs  errors.rs  graph.rs  mod.rs  node.rs  rank.rs  storage.rs  walk.rs
src/tests/: generate.rs  hello.rs  mod.rs  trigger_new.rs
